--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.12.2
-pandas==1.3.3
-nltk==3.6.3
-beautifulsoup4==4.9.3
-requests==2.26.0
-scikit-learn==0.24.2
-docx2txt==0.8
-PyPDF2==1.26.0
+streamlit
+pandas
+nltk
+beautifulsoup4
+requests
+scikit-learn
+boto3
+docx2txt
+PyPDF2
